--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="/poroje.css">
     <style>
-                input[type=number]::-webkit-outer-spin-button,
+        input[type=number]::-webkit-outer-spin-button,
         input[type=number]::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
+        }
+        
+        input[type=number] {
+            -moz-appearance: textfield; 
         }
     </style>
 </head>
